Sun Oct 10 19:45:48 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO tests/Makefile.am tests/result/* tests/scenario/*: fixing
	  "make tests" so it's not tied to my own directories paths.

Wed Oct  6 23:20:11 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/local_inotify.h: applied patch for inotify-0.13 from
	  John McCutchan.

Tue Oct  5 18:50:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: added BuildRequires: glib2-devel , bug #134689

Sun Oct  3 19:43:23 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.14
	* server/gam_excludes.c: added /dev/ and /proc/ in the list of the
	  excludes.
	* doc/Makefile.am: fixed the Makefile for new images and html.

Sun Oct  3 19:05:14 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/debug.html doc/gamin.html doc/internals.html doc/security.html:
	  more documentation cleanup, includes how to switch a running
	  application to debugging.

Sun Oct  3 17:55:17 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/* doc/internals.html doc/client_server.gif doc/server_structs.gif:
	  added documentation about the internals, regenerated the docs.

Sun Oct  3 16:11:01 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: extra debug on client API

Sun Oct  3 16:03:56 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_subscription.c: cleanup, debug
	  and probable fix for #132429, #133665 and #134413

Sat Oct  2 14:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: code cleanup
	* lib/gam_error.[ch] libgamin/gam_api.c: added a dynamic debugging
	  capability using SIGUSR2

Fri Oct  1 18:15:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.13

Fri Oct  1 12:01:39 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h server/gam_poll.c: portability cleanups w.r.t.